GNOME Bugzilla – Bug 782045
sharing: don't leak path
Last modified: 2017-05-02 10:57:34 UTC
.
Created attachment 350841 [details] [review] sharing: don't leak path g_file_get_path allocates new memory for path. So using g_strdup later would simply leak the previous allocation.
Review of attachment 350841 [details] [review]: Looks good, but can you please use an upper case letter after the ":" in the subject, so: sharing: Don't leak path
Created attachment 350855 [details] [review] sharing: Don't leak path g_file_get_path allocates new memory for path. So using g_strdup later would simply leak the previous allocation.
Review of attachment 350855 [details] [review]: You didn't need to upload a new patch, but thanks :) Do you have commit access? If not, would you like to request one? I'd be happy to vouch for you.
Attachment 350855 [details] pushed as 4c0928f - sharing: Don't leak path