sharing: Don't leak path

g_file_get_path() allocates new memory for path.
So using g_strdup() later would leak the previous allocation.

https://bugzilla.gnome.org/show_bug.cgi?id=782045